--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -15,7 +15,7 @@ steps:
   #     # true.
   #     add_language_pragma: true
 
-  # Import cleanup
+  # Import cleanupasd
   - imports:
       # There are different ways we can align names and lists.
       #
